feat: update instrument app
